# desigualdades-socioespaciais-fortaleza

./: README.md  main.py  notebook1.ipynb  notebook_final.ipynb  pyproject.toml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
