[project]
name = "analise-desigualdades-fortaleza"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.3",
    "mapclassify>=2.10.0",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0",
    "plotly>=6.8.0",
]
